--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 *.pyc
 0x02-python-import_modules/__pycache__/add_0.cpython-311.pyc
 *.pyc
+0x02-python-import_modules/__pycache__/calculator_1.cpython-311.pyc
