--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@
 0x02-python-import_modules/__pycache__/add_0.cpython-311.pyc
 *.pyc
 0x02-python-import_modules/__pycache__/calculator_1.cpython-311.pyc
+0x14-javascript-web_scraping/cisfun
